2001-11-05
	* Cleaned up page detach patch.
	* Merged TetriFast support.
	  (tested compatible with Pihvi's Java Tetrinet Server)
	* Added some fixes by Pihvi.
	* Miscellaneous bug fixes.
	* Game messages are no longer cleared when a game ends.
	* Player listing in the partyline is now numbered.

2001-01-13
	* Merged page detach patch from Neil Bird <neil.bird@rdel.co.uk>.
	* Fixed stupid bug in tetrinet_specialkey().

2000-07-03 - version 0.4.1

2000-06-27
	* Pause/resume now causes a message to be displayed on fields page.

2000-06-26
	* GTetrinet no longer resends field upon player join.
	* Fixed spurious "The game has resumed" messages.
	* Merged partyline patch for high chars.

2000-06-08
	* Changed website addresses.
	* Made configure run properly under GNOME 1.2.
	* Changed icons to be friendlier to dark-coloured backgrounds.

2000-01-12
	* Merged patch for Solaris support from Lars Christensen.
	* Made some modifications to the README file.

1999-12-30
	* Added a couple of checks for null pointers.

1999-12-21 - version 0.4

1999-12-20
	* Fixed bug where the random filled field is not sent after player
	  loses.

1999-12-13
	* Changed layout of connection dialog, added teamname entry.

1999-12-06
	* It is now possible to change teams while not connected.
	* Fixed a stupid spectator list bug.

1999-12-05
	* Fixed a nasty messed-up field bug. (Thanks drslum!)

1999-11-29
	* Added command line options support.
	* Miscellaneous bug fixes.

1999-11-28
	* Added tetrix server detection.

1999-11-27
	* Added history to the partyline input box.

1999-11-26
	* Fixed bugs with gamemsg input box.

1999-11-25
	* Fixed level displays when in spectator mode.
	* Fixed a case when a F line is sent as a spectator.

1999-11-17
	* Tweaked display of player join, leave, and team lessages.
	* Fixed bug where multiple error dialogs are displayed.

1999-11-16
	* Display of moderator change messages are now delayed, to prevent